5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4471/executions/1592_2425.log
== TEST (2019-04-22 13:56:41) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km")

-- OUTPUT:
14.286 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:57:05) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km")

-- OUTPUT:
14.286 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 13:57:54) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km")

-- EXECUTION TIME:
0.147715
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:58:16) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km")
-- OUTPUT:
14.286 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:58:30) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km")
-- OUTPUT:
14.286 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:58:34) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km")
-- OUTPUT:
14.286 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:58:57) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km")
-- OUTPUT:
14.286 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:59:13) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km")
-- OUTPUT:
14.286 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:00:10) 
-- CODE:
distancia = 500.0
combustivel gasto = 35.0
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km")
-- ERROR:
File "XXXX", line 2
    combustivel gasto = 35.0
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:00:28) 
-- CODE:
distancia = 500
combustivel gasto = 35
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km")
-- ERROR:
File "XXXX", line 2
    combustivel gasto = 35
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:00:56) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km")
-- OUTPUT:
14.286 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:01:34) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km")
-- EXECUTION TIME:
0.186234
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:02:30) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x ,3),"km")
-- OUTPUT:
14.286 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:02:33) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x ,3),"km")
-- OUTPUT:
14.286 km
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:28:20) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km")
-- EXECUTION TIME:
0.191579
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 14:28:51) 
-- CODE:
d=float(input("distancia"))
c=float(input("combustivel gasto"))
x=(d/c)
print(round(x,3),"km/l")
-- EXECUTION TIME:
0.151648
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
